--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
     <p>I like: </p>
     <ul>
-        <li><a href="">Playing games</a></li>
+        <li><a href="Games/index.html">Playing games</a></li>
         <li><a href="">Making GUIs</a></li>
         <li><a href="">Libre softwares</a></li>
     </ul>
