--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p>I like: </p>
     <ul>
         <li><a href="Games/index.html">Playing games</a></li>
-        <li><a href="">Making GUIs</a></li>
+        <li><a href="Guis/index.html">Making GUIs</a></li>
         <li><a href="">Libre softwares</a></li>
     </ul>
 </body>
