--- a/Guis/index.html
+++ b/Guis/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>GUIs</h1>
+   
+    <div class="Animation">
+        <h2>Animation</h2>
+        <img src="/imgs/Animate.png" alt="">
+        <p>My first animation which I had created using Java + Swing</p>
+    </div>
+    <div class="button">
+        <h2>Simple button</h2>
+        <img src="/imgs/Button.png" alt="">
+        <p>It is the simple example to create a button using Java<em>but it is not working</em></p>
+     
+    </div>
+    <div class="wButton">
+        <h2>Working button</h2>
+        <img src="/imgs/frm.png" alt="">
+         <p>This was my first Gui that worked perfectly.When you click that button a new frame will appear like this :</p>
+         <img src="/imgs/frm2.png" alt="">
+    </div>
+    <hr>
+    <div class="git">
+        <p>You can find their code <a href="https://github.com/Archie-6/GUI/tree/main/GUIs">here</a></p>
+    </div>
 </body>
 </html>
