--- a/Games/index.html
+++ b/Games/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <h1>Games that I play</h1>
    
     <div class="vice">
@@ -26,5 +27,6 @@
         <img src="/imgs/duesex.webp" alt="">
         <p>Dues Ex is the great game. I had played it a lot <em>but still not completed</em> Deus Ex takes place during 2052 while the world is facing a crisis caused by a mysterious nano-virus called the Gray Death. In the midst of the crisis, JC Denton, a nano-augmented rookie agent for the United Nations Anti-Terrorist Coalition (UNATCO), is sent to eliminate terrorist cells, but ends up drawn into the various schemes of rival factions and secret societies, who are responsible for the epidemic.</p>
     </div>
+    </header>
 </body>
 </html>
