--- a/Guis/index.html
+++ b/Guis/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <h1>GUIs</h1>
    
     <div class="Animation">
@@ -27,8 +28,11 @@
          <img src="/imgs/frm2.png" alt="">
     </div>
     <hr>
+    </header>
+    <footer>
     <div class="git">
         <p>You can find their code <a href="https://github.com/Archie-6/GUI/tree/main/GUIs">here</a></p>
     </div>
+    </footer>
 </body>
 </html>
