--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <footer>
     <h1>Archie's Website</h1>
     <h2>Introduction</h2>
 
@@ -20,5 +21,6 @@
         <li><a href="Guis/index.html">Making GUIs</a></li>
         <li><a href="">Libre softwares</a></li>
     </ul>
+    </footer>
 </body>
 </html>
