--- a/Software/index.html
+++ b/Software/index.html
@@ -5,11 +5,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software that I use</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1>Software that I use</h1>
+    <p>I often use libre softwares.</p>
+<div class="arch">
+    <h2>Operating System</h2>
+    <p>I use a dristibution of GNU/Linux,<a href="https://archlinux.org/">Arch Linux </a>an independently developed, general-purpose Linux distribution that strives to provide the latest stable versions of most software by following a rolling-release model. The default installation is a minimal base system, configured by the user to only add what is purposely required.</p>
+</div>
+<div class="texteditor">
+   <h2>Text Editor</h2>
+    <p> I use both <a href = "https://www.gnu.org/software/emacs/"> GNU Emacs</a> and <a href = "https://www.vim.org/"> vim </a>.
+        I use Emacs for programming and other tasks where I have to keep reading text for long and Vim for short text edits. 
+</div>
 
-
+<p></p>
 </body>
 <script type="text/javascript" src="script.js"></script>
 
