--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ul>
         <li><a href="Games/index.html">Playing games</a></li>
         <li><a href="Guis/index.html">Making GUIs</a></li>
-        <li><a href="">Libre softwares</a></li>
+        <li><a href="Software/index.html">Libre softwares</a></li>
     </ul>
     </footer>
 </body>
