--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Archie's website</title>
+    <title>Abhinav's website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <footer>
-    <h1>Archie's Website</h1>
+    <h1>Abhinav's Website</h1>
     <h2>Introduction</h2>
 
     <div>
         <img src="imgs/archie.webp" alt="">
-        <p>Hello, I am archie and this is my website</p>
+        <p>Hello, I am Abhinav and this is my website</p>
     </div>
     <p>I like: </p>
     <ul>
