--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <p>I like: </p>
     <ul>
         <li><a href="Games/index.html">Playing games</a></li>
-        <li><a href="Guis/index.html">Making GUIs</a></li>
+        <li><a href="Guis/index.html">Creating GUIs</a></li>
         <li><a href="Software/index.html">Libre softwares</a></li>
+        <li><a href="Websites/index.html">Creating Webpages</a></li>
     </ul>
     </footer>
 </body>
