--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <footer>
+    <header>
     <h1>Abhinav's Website</h1>
     <h2>Introduction</h2>
 
@@ -22,6 +22,12 @@
         <li><a href="Software/index.html">Libre softwares</a></li>
         <li><a href="Websites/index.html">Creating Webpages</a></li>
     </ul>
-    </footer>
+</header>
+<footer>
+    <div class="logos">
+    <a href="https://github.com/Abhinavv07" class="fab fa-github fa-2x"></a>
+    <a href="https://www.instagram.com/abhinav_mishra_7/" class="fab fa-instagram fa-2x"></a>
+    </div>
+</footer>
 </body>
 </html>
